--- a/selfstudy-rest/src/main/webapp/style/project.css
+++ b/selfstudy-rest/src/main/webapp/style/project.css
@@ -53,7 +53,8 @@ pre {
   font-family: "Lucida Console", Monaco, monospace;
   /*white-space: pre;*/
   white-space: pre-wrap;
-  padding: 4px;
+  padding: 8px;
+  margin: 8px;
 }
 button {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
