--- a/selfstudy-rest/src/main/webapp/style/project.css
+++ b/selfstudy-rest/src/main/webapp/style/project.css
@@ -77,4 +77,6 @@ select {
 textarea {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 16px;
+    width: 900px;
+   	height: 100px;
 }
